--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,15 @@ ol {
     max-width: 720px;
 }
 
+button {
+    margin: 0.25rem;
+}
+
 li {
     background-color: blueviolet;
     color: white;
     border: 1px solid;
     border-radius: 0.5rem;
-    /* margin: 0.25rem; */
     list-style: decimal;
 }
 
